Trying to fix white space bug

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@
   --primary-pink: #BE2969;
 
   --secondary-yellow: #E9ED32;
-
+  --vh: 1vh;
 }
 
 
@@ -46,7 +46,10 @@ body {
 body::before {
   content: '';
   position: fixed;
-  inset: 0; /* Shorthand for top/right/bottom/left: 0 */
+  height: calc(var(--vh) * 100);
+  width: 100%;
+  top: 0;
+  left: 0;
   background-color: #000;
   opacity: 0.7;
   z-index: -1;
